--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -32,7 +32,7 @@
       </div>
     </div>
     <div class="text-center py-3 bg-secondary">
-      <p class="mb-0">&copy; 2024 LinkArt. Todos los derechos reservados.</p>
+      <p class="mb-0">&copy; 2024 Dejando Huellas por Cancún. Todos los derechos reservados.</p>
     </div>
   </footer>
   
