--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -4,7 +4,7 @@
   <div class="container d-flex-column justify-content-center">
     <div class="image-background"></div>
     <div class="p-2 bd-highlight">
-      <h1>Tu donativo <b>puede</b> cambiar una vida</h1>
+      <h1>Tu donación <b>puede</b> cambiar una vida</h1>
     </div>
     <div class="d-flex justify-content-evenly mt-5">
       <button type="button" class="btn btn-warning">Quiero donar</button>
@@ -14,8 +14,8 @@
 </section>
 
 <section class="call-to-action">
-  <h2>!Puedes donar directamente en nuestra WishList de Amazon!</h2>
-  <h3>Solo da clic en la opción que prefieras</h3>
+  <h1 class="display-1">Puedes donar directamente en nuestra WishList de Amazon</h1>
+  <h2>Tu apoyo es fundamental para que podamos continuar rescatando y cuidando a perros y gatos abandonados. Aquí podras colaborando con nosotros en mu pocos clics</h2>
   <div class="row">
     <div class="col-md-4">
       <div class="card">
