--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -1,4 +1,11 @@
 <%- include ('partials/header')%>
+<style>
+  .carousel img {
+    width: 100%;
+    height: 280px;
+    object-fit: cover;
+   }
+</style>
 <!-- Hero section -->
 <section class="hero-section">
   <div class="container d-flex-column justify-content-center">
@@ -19,14 +26,37 @@
   <div class="row">
     <div class="col-md-4">
       <div class="card">
-        <img
-          src="https://dejandohuellascancun.org/wp-content/uploads/2024/07/Donaciones-1024x673.webp"
-          alt="Perro pidiendo ayuda"
-        />
-        <h3>Dona Croquetas</h3>
+        <div id="demo" class="carousel slide" data-bs-ride="carousel">
+          <!-- The slideshow/carousel -->
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img
+                src="https://kupfertax.mx/wp-content/uploads/2021/09/Banner-Productos-Purina_Mesa-de-trabajo-1-copia-002-1024x512.jpg"
+                alt="Perro pidiendo ayuda"
+                class="d-block"
+              />
+            </div>
+            <div class="carousel-item">
+              <img
+                src="https://etinor.com/wp-content/uploads/2024/02/Comida-mascotas-super-min-scaled.jpg"
+                alt="Perro pidiendo comida"
+                class="d-block"
+              />
+            </div>
+            <div class="carousel-item">
+              <img
+                src="https://imgs.search.brave.com/CbdBocHE9nDiZvaXrA58njZIyRwf9rftHxA3NUykaO4/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9pbWcu/ZnJlZXBpay5jb20v/Zm90by1ncmF0aXMv/YWNjZXNvcmlvcy1t/YXNjb3Rhcy1jb25j/ZXB0by1uYXR1cmFs/ZXphLW11ZXJ0YS1j/b21pZGEtc2VjYS1m/b3JtYS1odWVzb18y/My0yMTQ4OTQ5NTcx/LmpwZz9zaXplPTYy/NiZleHQ9anBn"
+                alt="Perro y comida"
+                class="d-block"
+              />
+            </div>
+          </div>
+        </div>
+        <h3>Dona Alimento</h3>
         <p>
-          Tus donaciones nos ayudan a poder proporcionar alimentos, atención
-          médica y un hogar temporal a los animales rescatados.
+          Tu donación de alimentos para mascotas 
+          puede marcar la diferencia en la vida de perros y gatos 
+          en situación de calle o en refugios. 
         </p>
         <a
           href="https://www.amazon.com.mx/hz/wishlist/ls/18JKG74LSFCCX?ref_=wl_share"
@@ -38,14 +68,36 @@
     </div>
     <div class="col-md-4">
       <div class="card">
-        <img
-          src="https://dejandohuellascancun.org/wp-content/uploads/2024/07/Donaciones-1024x673.webp"
-          alt="Perro pidiendo ayuda"
-        />
+        <div id="demo" class="carousel slide" data-bs-ride="carousel">
+          <!-- The slideshow/carousel -->
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img
+                src="https://imgs.search.brave.com/UQUxa32l1DDuib3-XiBNhkmYiMbgNsWlNyDjOFyrrGw/rs:fit:500:0:0:0/g:ce/aHR0cHM6Ly93d3cu/cGV0bWFya3QuY29t/Lm14L2Nkbi9zaG9w/L3Byb2R1Y3RzL21p/Y3JvNV80Zjg4ZjEy/Yy05OTc5LTQ2ZjAt/OTNiZi0wOWZkYmJl/MjgxNTJfNTEyeDUx/Mi5wbmc_dj0xNTg1/MjU0MzE0"
+                alt="Perro pidiendo ayuda"
+                class="d-block"
+              />
+            </div>
+            <div class="carousel-item">
+              <img
+                src="https://imgs.search.brave.com/wKIe6i85DytV5TzO66UC2Sd-251WhD-UoU2vTGsGYj8/rs:fit:500:0:0:0/g:ce/aHR0cHM6Ly9zdW5u/eS5wZXQvd3AtY29u/dGVudC91cGxvYWRz/LzIwMjMvMDcvUGVs/b3Rhcy1kZS10ZW5p/cy1kZS1jb2xvcmVz/LTQwMHgyODQucG5n"
+                alt="Perro pidiendo comida"
+                class="d-block"
+              />
+            </div>
+            <div class="carousel-item">
+              <img
+                src="https://i0.wp.com/asiescancun.mx/wp-content/uploads/2021/06/Accesorios-de-mascota.jpg"
+                alt="Perro y comida"
+                class="d-block"
+              />
+            </div>
+          </div>
+        </div>
         <h3>Dona Accesorios</h3>
         <p>
-          Tus donaciones nos ayudan a poder proporcionar alimentos, atención
-          médica y un hogar temporal a los animales rescatados.
+          Los accesorios también son esenciales para su comodidad, felicidad y 
+          podemos mejorar la calidad de vida de perros y gatos en espera de un hogar.
         </p>
         <a
           href="https://www.amazon.com.mx/hz/wishlist/ls/18JKG74LSFCCX?ref_=wl_share"
@@ -57,14 +109,36 @@
     </div>
     <div class="col-md-4">
       <div class="card">
-        <img
-          src="https://dejandohuellascancun.org/wp-content/uploads/2024/07/Donaciones-1024x673.webp"
-          alt="Perro pidiendo ayuda"
-        />
+        <div id="demo" class="carousel slide" data-bs-ride="carousel">
+          <!-- The slideshow/carousel -->
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img
+                src="https://m.media-amazon.com/images/I/519ztPLTcTL._AC_.jpg"
+                alt="Perro pidiendo ayuda"
+                class="d-block"
+              />
+            </div>
+            <div class="carousel-item">
+              <img
+                src="https://www.centralenlinea.com/images/thumbs/002/0026125_jabon-ppt-antipulgas-para-perro-grisi-100g_550.png"
+                alt="Perro pidiendo comida"
+                class="d-block"
+              />
+            </div>
+            <div class="carousel-item">
+              <img
+                src="https://m.media-amazon.com/images/I/61VgmHmR80L._AC_UF1000,1000_QL80_.jpg"
+                alt="Perro y comida"
+                class="d-block"
+              />
+            </div>
+          </div>
+        </div>
         <h3>Dona Articulos de higiene</h3>
         <p>
-          Tus donaciones nos ayudan a poder proporcionar alimentos, atención
-          médica y un hogar temporal a los animales rescatados.
+          Con tu donación de productos de limpieza e higiene, 
+          puedes ayudar a mejorar el bienestar y la calidad de vida de perros y gatos en situación de refugio.
         </p>
         <a
           href="https://www.amazon.com.mx/hz/wishlist/ls/18JKG74LSFCCX?ref_=wl_share"
@@ -76,9 +150,6 @@
     </div>
   </div>
 </section>
-<hr>
-<h1>Tu apoyo es fundamental para que podamos continuar rescatando y cuidando a perros y gatos abandonados. Aquí te presentamos tres maneras sencillas en las que puedes colaborar con nosotros y marcar una verdadera diferencia en la vida de estos animales.
-
 </h1>
 
 <%- include ('partials/footer')%>
