--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -148,6 +148,47 @@
         >
       </div>
     </div>
+    <div class="col-md-4">
+      <div class="card">
+        <div id="demo" class="carousel slide" data-bs-ride="carousel">
+          <!-- The slideshow/carousel -->
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img
+                src="https://m.media-amazon.com/images/I/519ztPLTcTL._AC_.jpg"
+                alt="Perro pidiendo ayuda"
+                class="d-block"
+              />
+            </div>
+            <div class="carousel-item">
+              <img
+                src="https://www.centralenlinea.com/images/thumbs/002/0026125_jabon-ppt-antipulgas-para-perro-grisi-100g_550.png"
+                alt="Perro pidiendo comida"
+                class="d-block"
+              />
+            </div>
+            <div class="carousel-item">
+              <img
+                src="https://m.media-amazon.com/images/I/61VgmHmR80L._AC_UF1000,1000_QL80_.jpg"
+                alt="Perro y comida"
+                class="d-block"
+              />
+            </div>
+          </div>
+        </div>
+        <h3>Articulos de limpieza</h3>
+        <p>
+          Con tu donación de productos de limpieza e higiene, 
+          puedes ayudar a mejorar el bienestar y la calidad de vida de perros y gatos en situación de refugio.
+        </p>
+        <a
+          href="https://www.amazon.com.mx/hz/wishlist/ls/18JKG74LSFCCX?ref_=wl_share"
+          class="btn btn-primary"
+          role="button"
+          >Quiero donar</a
+        >
+      </div>
+    </div>
   </div>
 </section>
 </h1>
