--- a/public/styles.css
+++ b/public/styles.css
@@ -105,9 +105,7 @@
 }
 
 .btn{
-  z-index: 1; /* Asegura que el texto esté sobre la imagen */
-  position: relative;
-  padding: 15px 70px;
+  background-color: #FFA500;
 }
 
 b{
@@ -122,13 +120,26 @@ b{
 }
 
 .card {
-  border: 1px solid #ccc;
-  border-radius: 10px;
-  padding: 20px;
-  text-align: center;
+  height: 100%;
+}
+
+.carousel-inner img {
+  width: 100%;
+  height: 200px; /* Ajusta el alto según lo necesites */
+  object-fit: cover; /* Hace que las imágenes mantengan su proporción */
+}
+
+.carousel-inner {
+  max-height: 200px; /* Para limitar la altura del carousel */
 }
 
 .card img {
   max-width: 100%;
   height: auto;
+}
+
+.carousel img {
+  width: 100%;
+  height: 280px;
+  object-fit: cover;
 }
