--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -1,11 +1,5 @@
 <%- include ('partials/header')%>
-<style>
-  .carousel img {
-    width: 100%;
-    height: 280px;
-    object-fit: cover;
-   }
-</style>
+<link rel="stylesheet" href="/style.css" />
 <!-- Hero section -->
 <section class="hero-section">
   <div class="container d-flex-column justify-content-center">
@@ -21,13 +15,18 @@
 </section>
 
 <section class="call-to-action">
-  <h1 class="display-1">Puedes donar directamente en nuestra WishList de Amazon</h1>
-  <h2>Tu apoyo es fundamental para que podamos continuar rescatando y cuidando a perros y gatos abandonados. Aquí podras colaborando con nosotros en mu pocos clics</h2>
+  <h1 class="display-1">
+    Puedes donar directamente en nuestra WishList de Amazon
+  </h1>
+  <h2>
+    Tu apoyo es fundamental para que podamos continuar rescatando y cuidando a
+    perros y gatos abandonados. Aquí podras colaborando con nosotros en mu pocos
+    clics
+  </h2>
   <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-3">
       <div class="card">
-        <div id="demo" class="carousel slide" data-bs-ride="carousel">
-          <!-- The slideshow/carousel -->
+        <div id="demo1" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
               <img
@@ -45,7 +44,7 @@
             </div>
             <div class="carousel-item">
               <img
-                src="https://imgs.search.brave.com/CbdBocHE9nDiZvaXrA58njZIyRwf9rftHxA3NUykaO4/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9pbWcu/ZnJlZXBpay5jb20v/Zm90by1ncmF0aXMv/YWNjZXNvcmlvcy1t/YXNjb3Rhcy1jb25j/ZXB0by1uYXR1cmFs/ZXphLW11ZXJ0YS1j/b21pZGEtc2VjYS1m/b3JtYS1odWVzb18y/My0yMTQ4OTQ5NTcx/LmpwZz9zaXplPTYy/NiZleHQ9anBn"
+                src="https://imgs.search.brave.com/CbdBocHE9nDiZvaXrA58njZIyRwf9rftHxA3NUykaO4/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9pbWcuZnJlZXBpay5jb20vZm90by1ncmF0aXMvYWNjZXNvcmlvcy1tYXNjb3Rhcy1jb25jZXB0by1uYXR1cmFsZXphLW11ZXJ0YS1jb21pZGEtc2VjYS1mb3JtYS1odWVzb18yMy0yMTQ4OTQ5NTcxLmpwZz9zaXplPTYyNiZleHQ9anBn"
                 alt="Perro y comida"
                 class="d-block"
               />
@@ -54,9 +53,8 @@
         </div>
         <h3>Dona Alimento</h3>
         <p>
-          Tu donación de alimentos para mascotas 
-          puede marcar la diferencia en la vida de perros y gatos 
-          en situación de calle o en refugios. 
+          Tu donación de alimentos para mascotas puede marcar la diferencia en
+          la vida de perros y gatos en situación de calle o en refugios.
         </p>
         <a
           href="https://www.amazon.com.mx/hz/wishlist/ls/18JKG74LSFCCX?ref_=wl_share"
@@ -66,38 +64,37 @@
         >
       </div>
     </div>
-    <div class="col-md-4">
+    <div class="col-md-3">
       <div class="card">
-        <div id="demo" class="carousel slide" data-bs-ride="carousel">
-          <!-- The slideshow/carousel -->
+        <div id="demo1" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
               <img
-                src="https://imgs.search.brave.com/UQUxa32l1DDuib3-XiBNhkmYiMbgNsWlNyDjOFyrrGw/rs:fit:500:0:0:0/g:ce/aHR0cHM6Ly93d3cu/cGV0bWFya3QuY29t/Lm14L2Nkbi9zaG9w/L3Byb2R1Y3RzL21p/Y3JvNV80Zjg4ZjEy/Yy05OTc5LTQ2ZjAt/OTNiZi0wOWZkYmJl/MjgxNTJfNTEyeDUx/Mi5wbmc_dj0xNTg1/MjU0MzE0"
+                src="https://kupfertax.mx/wp-content/uploads/2021/09/Banner-Productos-Purina_Mesa-de-trabajo-1-copia-002-1024x512.jpg"
                 alt="Perro pidiendo ayuda"
                 class="d-block"
               />
             </div>
             <div class="carousel-item">
               <img
-                src="https://imgs.search.brave.com/wKIe6i85DytV5TzO66UC2Sd-251WhD-UoU2vTGsGYj8/rs:fit:500:0:0:0/g:ce/aHR0cHM6Ly9zdW5u/eS5wZXQvd3AtY29u/dGVudC91cGxvYWRz/LzIwMjMvMDcvUGVs/b3Rhcy1kZS10ZW5p/cy1kZS1jb2xvcmVz/LTQwMHgyODQucG5n"
+                src="https://etinor.com/wp-content/uploads/2024/02/Comida-mascotas-super-min-scaled.jpg"
                 alt="Perro pidiendo comida"
                 class="d-block"
               />
             </div>
             <div class="carousel-item">
               <img
-                src="https://i0.wp.com/asiescancun.mx/wp-content/uploads/2021/06/Accesorios-de-mascota.jpg"
+                src="https://imgs.search.brave.com/CbdBocHE9nDiZvaXrA58njZIyRwf9rftHxA3NUykaO4/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9pbWcuZnJlZXBpay5jb20vZm90by1ncmF0aXMvYWNjZXNvcmlvcy1tYXNjb3Rhcy1jb25jZXB0by1uYXR1cmFsZXphLW11ZXJ0YS1jb21pZGEtc2VjYS1mb3JtYS1odWVzb18yMy0yMTQ4OTQ5NTcxLmpwZz9zaXplPTYyNiZleHQ9anBn"
                 alt="Perro y comida"
                 class="d-block"
               />
             </div>
           </div>
         </div>
-        <h3>Dona Accesorios</h3>
+        <h3>Dona Alimento</h3>
         <p>
-          Los accesorios también son esenciales para su comodidad, felicidad y 
-          podemos mejorar la calidad de vida de perros y gatos en espera de un hogar.
+          Tu donación de alimentos para mascotas puede marcar la diferencia en
+          la vida de perros y gatos en situación de calle o en refugios.
         </p>
         <a
           href="https://www.amazon.com.mx/hz/wishlist/ls/18JKG74LSFCCX?ref_=wl_share"
@@ -107,38 +104,37 @@
         >
       </div>
     </div>
-    <div class="col-md-4">
+    <div class="col-md-3">
       <div class="card">
-        <div id="demo" class="carousel slide" data-bs-ride="carousel">
-          <!-- The slideshow/carousel -->
+        <div id="demo1" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
               <img
-                src="https://m.media-amazon.com/images/I/519ztPLTcTL._AC_.jpg"
+                src="https://kupfertax.mx/wp-content/uploads/2021/09/Banner-Productos-Purina_Mesa-de-trabajo-1-copia-002-1024x512.jpg"
                 alt="Perro pidiendo ayuda"
                 class="d-block"
               />
             </div>
             <div class="carousel-item">
               <img
-                src="https://www.centralenlinea.com/images/thumbs/002/0026125_jabon-ppt-antipulgas-para-perro-grisi-100g_550.png"
+                src="https://etinor.com/wp-content/uploads/2024/02/Comida-mascotas-super-min-scaled.jpg"
                 alt="Perro pidiendo comida"
                 class="d-block"
               />
             </div>
             <div class="carousel-item">
               <img
-                src="https://m.media-amazon.com/images/I/61VgmHmR80L._AC_UF1000,1000_QL80_.jpg"
+                src="https://imgs.search.brave.com/CbdBocHE9nDiZvaXrA58njZIyRwf9rftHxA3NUykaO4/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9pbWcuZnJlZXBpay5jb20vZm90by1ncmF0aXMvYWNjZXNvcmlvcy1tYXNjb3Rhcy1jb25jZXB0by1uYXR1cmFsZXphLW11ZXJ0YS1jb21pZGEtc2VjYS1mb3JtYS1odWVzb18yMy0yMTQ4OTQ5NTcxLmpwZz9zaXplPTYyNiZleHQ9anBn"
                 alt="Perro y comida"
                 class="d-block"
               />
             </div>
           </div>
         </div>
-        <h3>Dona Articulos de higiene</h3>
+        <h3>Dona Alimento</h3>
         <p>
-          Con tu donación de productos de limpieza e higiene, 
-          puedes ayudar a mejorar el bienestar y la calidad de vida de perros y gatos en situación de refugio.
+          Tu donación de alimentos para mascotas puede marcar la diferencia en
+          la vida de perros y gatos en situación de calle o en refugios.
         </p>
         <a
           href="https://www.amazon.com.mx/hz/wishlist/ls/18JKG74LSFCCX?ref_=wl_share"
@@ -148,49 +144,74 @@
         >
       </div>
     </div>
-    <div class="col-md-4">
+    <div class="col-md-3">
       <div class="card">
-        <div id="demo" class="carousel slide" data-bs-ride="carousel">
-          <!-- The slideshow/carousel -->
+        <div id="demo1" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
               <img
-                src="https://m.media-amazon.com/images/I/519ztPLTcTL._AC_.jpg"
+                src="https://kupfertax.mx/wp-content/uploads/2021/09/Banner-Productos-Purina_Mesa-de-trabajo-1-copia-002-1024x512.jpg"
                 alt="Perro pidiendo ayuda"
                 class="d-block"
               />
             </div>
             <div class="carousel-item">
               <img
-                src="https://www.centralenlinea.com/images/thumbs/002/0026125_jabon-ppt-antipulgas-para-perro-grisi-100g_550.png"
+                src="https://etinor.com/wp-content/uploads/2024/02/Comida-mascotas-super-min-scaled.jpg"
                 alt="Perro pidiendo comida"
                 class="d-block"
               />
             </div>
             <div class="carousel-item">
               <img
-                src="https://m.media-amazon.com/images/I/61VgmHmR80L._AC_UF1000,1000_QL80_.jpg"
+                src="https://imgs.search.brave.com/CbdBocHE9nDiZvaXrA58njZIyRwf9rftHxA3NUykaO4/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9pbWcuZnJlZXBpay5jb20vZm90by1ncmF0aXMvYWNjZXNvcmlvcy1tYXNjb3Rhcy1jb25jZXB0by1uYXR1cmFsZXphLW11ZXJ0YS1jb21pZGEtc2VjYS1mb3JtYS1odWVzb18yMy0yMTQ4OTQ5NTcxLmpwZz9zaXplPTYyNiZleHQ9anBn"
                 alt="Perro y comida"
                 class="d-block"
               />
             </div>
           </div>
         </div>
-        <h3>Articulos de limpieza</h3>
+        <h3>Dona Alimento</h3>
         <p>
-          Con tu donación de productos de limpieza e higiene, 
-          puedes ayudar a mejorar el bienestar y la calidad de vida de perros y gatos en situación de refugio.
+          Tu donación de alimentos para mascotas puede marcar la diferencia en
+          la vida de perros y gatos en situación de calle o en refugios.
         </p>
-        <a
-          href="https://www.amazon.com.mx/hz/wishlist/ls/18JKG74LSFCCX?ref_=wl_share"
-          class="btn btn-primary"
-          role="button"
-          >Quiero donar</a
-        >
+        <button type="button" class="btn btn-primary btn-donar" data-link="https://www.amazon.com.mx/hz/wishlist/ls/18JKG74LSFCCX?ref_=wl_share" data-bs-toggle="modal" data-bs-target="#donarModal">
+          Quiero donar
+        </button>
       </div>
     </div>
   </div>
+  <!-- Modal -->
+<div class="modal fade" id="donarModal" tabindex="-1" aria-labelledby="donarModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="donarModalLabel">Confirmar Redirección</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
+      </div>
+      <div class="modal-body">
+        Estás a punto de ser redirigido a la página de Amazon para realizar tu donación. ¿Deseas continuar?
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+        <button type="button" class="btn btn-primary" id="btnContinuar">Continuar</button>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- Script -->
+<script>
+  document.querySelectorAll('.btn-donar').forEach(button => {
+    button.addEventListener('click', function() {
+      // Obtiene el enlace del atributo 'data-link' del botón
+      const link = this.getAttribute('data-link');
+      // Configura el evento para el botón de confirmación
+      document.getElementById('btnContinuar').onclick = function() {
+        window.open(link, '_blank'); // Abre la página en una nueva pestaña
+      };
+    });
+  });
+</script>
 </section>
-</h1>
-
 <%- include ('partials/footer')%>
