--- a/styles.css
+++ b/styles.css
@@ -121,18 +121,6 @@ b{
   padding: 30px;
 }
 
-.card {
-  border: 1px solid #ccc;
-  border-radius: 10px;
-  padding: 20px;
-  text-align: center;
-}
-
-.card img {
-  max-width: 100%;
-  height: auto;
-}
-
 .col1{
   text-align: justify;
   color: #000000;
@@ -142,4 +130,29 @@ b{
 
 .col2 a{
   display: block;
+}
+
+.card {
+  height: 100%;
+}
+
+.carousel-inner img {
+  width: 100%;
+  height: 200px; /* Ajusta el alto según lo necesites */
+  object-fit: cover; /* Hace que las imágenes mantengan su proporción */
+}
+
+.carousel-inner {
+  max-height: 200px; /* Para limitar la altura del carousel */
+}
+
+.card img {
+  max-width: 100%;
+  height: auto;
+}
+
+.carousel img {
+  width: 100%;
+  height: 280px;
+  object-fit: cover;
 }
