--- a/styles.css
+++ b/styles.css
@@ -75,26 +75,86 @@
 }
 
 
-.hero-section {
-  position: relative;
-  height: 100vh;
+.hero {
   display: flex;
   align-items: center;
   justify-content: center;
-  
+  flex-direction: column;
+  text-align: center;
+  background-image: url('https://dejandohuellascancun.org/wp-content/uploads/2024/07/Hero-scaled.webp');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  width: 100%;
+  height: 75vh; /* Ajusta este valor para modificar la altura */
+  color: white;
+  padding: 20px;
+  margin-top: 1%;
 }
 
-.image-background {
-  background-image: url('https://www.tribunadesanluis.com.mx/local/tfpjkl-perritos/ALTERNATES/LANDSCAPE_768/perritos');
-  background-size: cover;
-  background-position: center;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  opacity: 0.70;
+.hero h1 {
+  font-size: 3rem;
+  margin: 0;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
+
+.hero p {
+  font-size: 1.2rem;
+  margin: 20px 0;
+  text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
+}
+
+.hero button {
+  z-index: 1; /* Asegura que el texto esté sobre la imagen */
+  position: relative;
+  width: 15%;
+  padding: 10px 50px;
+  background-color: #FFA500;
+  margin-bottom: 5%;
+  text-align: center; /* Alinea el texto centrado */
+  display: inline-block; /* Asegura que se comporte como un elemento inline-block */
+  transition: transform 0.3s, background-color 0.3s;
+}
+
+.hero button:hover {
+  transform: scale(1.1); /* Aumenta el tamaño (zoom) */
+  background-color: #CFF3FF; /* Cambia el color de fondo al pasar el mouse */
+  color: black; /* Cambia el color del texto */
+}
+
+@media (max-width: 768px) {
+  .hero h1 {
+      font-size: 2.5rem;
+  }
+  
+  .hero p {
+      font-size: 1rem;
+  }
+  
+  .hero button {
+      font-size: 0.9rem;
+      text-align: center;
+      width: 40%; /* Ajusta el ancho para pantallas medianas */
+      padding: 12px 4%; /* Reduce el padding */
+  }
+}
+
+@media (max-width: 480px) {
+  .hero h1 {
+      font-size: 2rem;
+  }
+  
+  .hero p {
+      font-size: 0.9rem;
+  }
+
+  .hero button {
+    width: 60%; /* Ajusta el ancho para pantallas pequeñas */
+    padding: 10px 3%; /* Reduce más el padding */
+  }
+
+}
+
 
 .container h1 {
   z-index: 1; /* Asegura que el texto esté sobre la imagen */
@@ -107,8 +167,24 @@
 .btn{
   z-index: 1; /* Asegura que el texto esté sobre la imagen */
   position: relative;
+  width: 75%;
   padding: 15px 70px;
+  background-color: #FFA500;
+  margin-bottom: 5%;
 }
+
+.btn-primary {
+  font-family: 'Roboto', sans-serif; /* Aplica la fuente */
+  font-weight: 400;
+  transition: transform 0.3s, background-color 0.3s;
+}
+
+.btn-primary:hover {
+  transform: scale(1.1); /* Aumenta el tamaño (zoom) */
+  background-color: #CFF3FF; /* Cambia el color de fondo al pasar el mouse */
+  color: black; /* Cambia el color del texto */
+}
+
 
 b{
   color: red;
@@ -134,6 +210,7 @@ b{
 
 .card {
   height: 100%;
+  align-items: center;
 }
 
 .carousel-inner img {
