--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,8 @@ h2{
   font-weight: 600;
   font-size: 3rem;
   color: #032E42;
+  margin-left: 3%;
+  text-align: left;
 }
 
 h3{
@@ -31,7 +33,6 @@ h3{
   font-weight: 600;
   color: #032E42;
   text-align: left;
-  margin-left: 3%;
 }
 
 .textotarjetas{
@@ -46,6 +47,17 @@ p{
   font-size: 1rem;
   font-family: 'Roboto', sans-serif;
   font-weight: 400;
+  text-align: justify;
+  margin-right: 3%;
+  margin-left: 3%;
+}
+
+.textofinal{
+  font-size: 1rem;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 400;
+  text-align: left;
+  margin-left: 3%;
 }
 
 .navbar {
@@ -91,7 +103,7 @@ p{
 }
 
 .offcanvas-header {
-  background-color: bisque;
+  background-color: #CFF3FF;
 }
 
 .nav-link:hover,
@@ -105,15 +117,6 @@ p{
     content: "";
     position: absolute; /* Posicion absoula de los padres */
     bottom: 0; /* Coloca la linea justo debajo del link */
-    left: 50%; /* Empieza a dibujar cuando llega al 50% */
-    transform: translateX(
-      -50%
-    ); /* Translada la linea hacia la izquierda, haciendo que se centre */
-    width: 0; /* Empieza con un ancho de 0 */
-    height: 2px;
-    background-color: black;
-    visibility: hidden;
-    transition: 0.3s ease-in-out; /*comenzará lentamente, será más rápido en el medio de la animación y luego terminará lentamente.*/
   }
 
   .nav-link:hover::before,
@@ -251,8 +254,8 @@ p{
   border-radius: 5%;
   width: 200px;
   height: 40px;
-  bottom: 3%;
-  left: 3%;
+  bottom: 5%;
+  left: 5%;
   background-color: #FFA500;
   font-family: 'Archivo', sans-serif; /* Aplica la fuente */
   color: white;
@@ -349,13 +352,15 @@ p{
   display: grid;
   grid-template-columns: repeat(4, 1fr); /* 4 imágenes por fila */
   gap: 10px;
+  margin-left: 3%;
+  margin-right: 3%;
 }
 
 .gallery img {
   width: 100%;
-  height: auto;
+  height: 250px;
   object-fit: cover;
-  transition: transform 0.3s ease;
+  transition: transform 0.6s ease;
   cursor: pointer;
 }
 
